--- a/seredasv/build.gradle
+++ b/seredasv/build.gradle
@@ -57,6 +57,8 @@ dependencies {
 
     //DI
     compile 'com.google.dagger:dagger:2.0.2'
+    provided 'com.google.dagger:dagger-compiler:2.0.2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
 
     //annotations
     apt "org.androidannotations:androidannotations:$AAVersion"
