--- a/seredasv/src/main/AndroidManifest.xml
+++ b/seredasv/src/main/AndroidManifest.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.tinynote.seredasv" >
+<manifest package="com.tinynote.seredasv"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
+        android:name=".views.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".views.activities.MainActivity"
-            android:label="@string/app_name" >
+            android:name=".views.activities.MainActivity_"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
