--- a/seredasv/build.gradle
+++ b/seredasv/build.gradle
@@ -14,6 +14,9 @@ buildscript {
 
 repositories {
     jcenter()
+    maven {
+        url "https://jitpack.io"
+    }
 }
 
 apt {
@@ -78,4 +81,10 @@ dependencies {
 
     //database
     compile 'io.realm:realm-android:0.87.5'
+
+    //color picker
+    compile 'com.github.QuadFlask:colorpicker:0.0.9'
+
+    //rich edit text format
+    compile 'com.github.mthli:Knife:v1.1'
 }
